Networking/vpcpeers.tf
resource "aws_vpc_peering_connection" "vpc1peervpc2" {
  # Create a peering connection between the two VPCs
}
